routes improved; swagger and readme updated
