# lib/api.js
@@ -21,7 +21,7 @@ var internals = {};
 internals.router = express.Router();
 exports.middleware = internals.router;
 
-internals.router.post('/send', helper.validateBody(schema.sendBody), function (req, res) {
+internals.router.post('/sms', helper.validateBody(schema.sendBody), function (req, res) {
     var phone = req.body.phone;
     var msg = req.body.msg;
 
@@ -31,7 +31,7 @@ internals.router.post('/send', helper.validateBody(schema.sendBody), function (r
 });
 
 
-internals.router.post('/subscribe', helper.validateBody(schema.subscribe), function (req, res) {
+internals.router.post('/callbacks/', helper.validateBody(schema.subscribe), function (req, res) {
     var phone = req.body.phone;
     var serviceUrl = req.body.serviceUrl;
     var callbackPath = req.body.callbackPath;
@@ -49,9 +49,9 @@ internals.router.post('/subscribe', helper.validateBody(schema.subscribe), funct
 });
 
 
-internals.router.post('/unsubscribe', helper.validateBody(schema.unsubscribe), function (req, res) {
-    var phone = req.body.phone;
-    var serviceUrl = req.body.serviceUrl;
+internals.router.delete('/callbacks/', helper.validateQuery(schema.unsubscribe), function (req, res) {
+    var phone = req.query.phone;
+    var serviceUrl = req.query.serviceUrl;
 
     dispatcher.unsubscribe(phone, serviceUrl, function(err) {
         if (err) {
