# swagger.json
@@ -3,7 +3,7 @@
     "info": {
         "title": "smsService API",
         "description": "Send and receive SMS with smsService API",
-        "version": "0.4.1",
+        "version": "0.5.3",
         "termsOfService": "http://api.lineberty.net/terms/",
         "contact": {
             "name": "API Support",
@@ -27,7 +27,7 @@
         "application/json"
     ],
     "paths": {
-        "/send": {
+        "/sms": {
             "post": {
                 "tags": [
                     "sms"
@@ -69,10 +69,10 @@
                 }
             }
         },
-        "/subscribe": {
+        "/callbacks/": {
             "post": {
                 "tags": [
-                    "subscription"
+                    "callback"
                 ],
                 "summary": "Subscribe to get the receiver response",
                 "description":
@@ -110,12 +110,10 @@
                         "description": "Invalid token"
                     }
                 }
-            }
-        },
-        "/unsubscribe": {
-            "post": {
+            },
+            "delete": {
                 "tags": [
-                    "subscription"
+                    "callback"
                 ],
                 "summary": "Unsubscribe to get a response from a phone",
                 "description": "",
@@ -132,13 +130,19 @@
                         "type": "string"
                     },
                     {
-                        "in": "body",
-                        "name": "body",
-                        "description": "informations needed to unsubscribe",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/unsubscribeRequest"
-                        }
+                        "in": "query",
+                        "name": "phone",
+                        "description": "The phone number",
+                        "type": "string",
+                        "match": "^00[0-9]{1,3}[0-9]{7,14}$",
+                        "required": true
+                    },
+                    {
+                        "in": "query",
+                        "name": "serviceUrl",
+                        "description": "the service url of the callback",
+                        "type": "string",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -204,13 +208,7 @@
                 "serviceUrl"
             ],
             "properties": {
-                "phone": {
-                    "type": "string",
-                    "pattern": "^00[0-9]{1,3}[0-9]{7,14}$"
-                },
-                "serviceUrl": {
-                    "type": "string"
-                }
+
             }
         },
         "incomingSms": {
